@@ -22,6 +22,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{388, 82}, {1108, 939}}</string>
+	<string>{{557, 86}, {982, 933}}</string>
 </dict>
 </plist>
