@@ -1,5 +1,9 @@
 2007-07-31  Satoshi Nakagawa <artension@gmail.com>
 
+	Added growl notifications on logged in, disconnected, kicked, invited.
+
+2007-07-31  Satoshi Nakagawa <artension@gmail.com>
+
 	Changed the default action for Tab key to going to next channel.
 	Changed to open new talk when sending a text message to unknown nick.
 
